[gd_scene load_steps=3 format=3 uid="uid://bbx4xuy48vfcf"]

[ext_resource type="Script" uid="uid://cher2icgt0y8k" path="res://available_parameter.gd" id="1_bbgrc"]
[ext_resource type="Texture2D" uid="uid://c1elx3oj6r7fu" path="res://icons/trashcan_small.png" id="2_trlep"]

[node name="ParameterContainer" type="BoxContainer"]
script = ExtResource("1_bbgrc")

[node name="ParameterTypeLabel" type="Label" parent="."]
layout_mode = 2
text = "FUNCTIONS_PARAMETERS_PARAMETER_TYPE_LABEL"

[node name="ParameterTypeBox" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "String"
popup/item_0/id = 0
popup/item_1/text = "Number"
popup/item_1/id = 1

[node name="ParameterNameLabel" type="Label" parent="."]
layout_mode = 2
text = "FUNCTIONS_PARAMETERS_PARAMETER_NAME_LABEL"

[node name="ParameterNameEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
expand_to_text_length = true

[node name="ParameterDescriptionLabel" type="Label" parent="."]
layout_mode = 2
text = "FUNCTIONS_PARAMETERS_PARAMETER_DESCRIPTION_LABEL"

[node name="ParameterDescriptionEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ParameterHasMinMaxCheckbox" type="CheckBox" parent="."]
visible = false
layout_mode = 2
text = "Has limits"

[node name="ParameterMinimumLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Min."

[node name="ParameterMinimumEdit" type="SpinBox" parent="."]
visible = false
layout_mode = 2
min_value = -999999.0
max_value = 99999.0

[node name="ParameterMaximumLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Max."

[node name="ParameterMaximumEdit" type="SpinBox" parent="."]
visible = false
layout_mode = 2
min_value = -99999.0
max_value = 999999.0

[node name="ParameterIsEnumCheckBox" type="CheckBox" parent="."]
layout_mode = 2
text = "FUNCTIONS_PARAMETERS_PARAMETER_ENUMERATION_CHECKBOX_LABEL"

[node name="ParameterEnumEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="ParameterIsRequiredCheckBox" type="CheckBox" parent="."]
layout_mode = 2
button_pressed = true
text = "FUNCTIONS_PARAMETERS_PARAMETER_REQUIRED_LABEL"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_trlep")

[connection signal="item_selected" from="ParameterTypeBox" to="." method="_on_parameter_type_box_item_selected"]
[connection signal="text_changed" from="ParameterNameEdit" to="." method="_on_parameter_name_edit_text_changed"]
[connection signal="text_changed" from="ParameterDescriptionEdit" to="." method="_on_parameter_name_edit_text_changed"]
[connection signal="pressed" from="ParameterHasMinMaxCheckbox" to="." method="update_functions_global"]
[connection signal="pressed" from="ParameterHasMinMaxCheckbox" to="." method="_on_parameter_has_min_max_checkbox_pressed"]
[connection signal="changed" from="ParameterMinimumEdit" to="." method="update_functions_global"]
[connection signal="changed" from="ParameterMaximumEdit" to="." method="update_functions_global"]
[connection signal="pressed" from="ParameterIsEnumCheckBox" to="." method="_on_parameter_is_enum_check_box_pressed"]
[connection signal="text_changed" from="ParameterEnumEdit" to="." method="_on_parameter_name_edit_text_changed"]
[connection signal="pressed" from="ParameterIsRequiredCheckBox" to="." method="update_functions_global"]
[connection signal="mouse_entered" from="DeleteButton" to="." method="_on_delete_button_mouse_entered"]
[connection signal="mouse_exited" from="DeleteButton" to="." method="_on_delete_button_mouse_exited"]
[connection signal="pressed" from="DeleteButton" to="." method="update_functions_global"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
